# seedling

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
1.0.0rc1/: 404.html  index.html  sitemap.xml
1.0.0rc1/benchmarks/: index.html
1.0.0rc1/cli/: index.html
1.0.0rc1/configuration/: index.html
1.0.0rc1/cookbook/: index.html
benchmarks/: bench_create_batch.py  bench_parallel.py
cli/: index.html
configuration/: index.html
docs/: benchmarks.md  cli.md  configuration.md  cookbook.md  factories.md  index.md  migration.md  runner.md  seeders.md  state-tracking.md
factories/: index.html
runner/: index.html
search/: search_index.json
seeders/: index.html
seedling/: __init__.py  _formats.py  cli.py  environments.py  exceptions.py  factory.py  helpers.py  pytest_plugin.py  resolver.py  runner.py  seeder.py  state.py
tests/: conftest.py  test_autofactory.py  test_build_dict.py  test_bulk_insert.py  test_cli.py  test_cli_phase3.py  test_descriptors.py  test_factory.py  test_formats.py  test_helpers.py  test_plugin.py  test_post_generation.py  test_related_factory.py  test_reset_sequence.py  test_resolver.py  test_restore.py  test_runner.py  test_scaffolding.py  test_seed.py  test_smoke_examples.py  test_state.py  test_tags.py
(+41 files in other folders)
